# shortais

./: .gitignore  README.md  _debug_db.py  _test_api.py  app.py  config.py  database.py  fuyao_client.py  get_data.py  requirements.txt  screener.py  sector.py  visualizer.py  需求文档.md
dcsdk/: README.md  __init__.py  api.py  board.py  client.py  kline.py  market.py  moneyflow.py  monitor.py  pyproject.toml  quote.py
