[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dcsdk"
version = "1.0.0"
description = "A股行情数据 SDK — 腾讯行情(主力) + 新浪行情(备用) + 东方财富(基本面)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "requests>=2.25",
    "urllib3>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["dcsdk*"]
